[metadata]
name = catnip
summary = Standalone dashboard for Cloudkitty
description-file =
    README.rst
author = Julien Pinchelimouroux
author-email = julien.pinchelimouroux@objectif-libre.com
classifier =
    Programming Language :: Python :: 3.6
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    License :: OSI Approved :: MIT License
url = https://github.com/ObjectifLibre/ckui

[options]
packages =
    catnip
    dashboard
include_package_data = True